--- a/src/app/index/index.component.scss
+++ b/src/app/index/index.component.scss
@@ -1,5 +1,8 @@
 div.container {
   height: 100vh;
+  width: 100%;
+  min-height: 90vh;
+  position: relative;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -23,12 +26,10 @@ div.main {
   display: flex;
   z-index: 1;
   overflow: hidden;
-  background-color: var(--indexComponent);
   justify-content: space-between;
   align-items: center;
   section {
     &.title {
-      color: black;
       display: flex;
       min-width: 45%;
       padding: 2% 7%;
@@ -37,17 +38,6 @@ div.main {
       box-shadow: 0 0 10em 15vw var(--primary-color);
       flex-flow: column;
       justify-content: space-evenly;
-      button {
-        &::after {
-          display: inline;
-          content: "  >";
-          margin-left: 5px;
-          position: absolute;
-          transform: translateX(200%);
-          transition: transform 0.2s ease;
-        }
-        &:hover {&::after {transform: translateX(0%);}}
-      }
       div.introduction {
         span:first-child {
           font-size: 1.3em;
@@ -55,7 +45,7 @@ div.main {
           &::after {
             content: " !";
             font-size: 1.2em;
-            color: var(--colorSecondary);
+            color: var(--accent-color);
           }
         }
       }
