--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,4 @@
-@use '@angular/material' as mat;
-
-// Include the common styles for Angular Material. We include this here so that you only
-// have to load a single css file for Angular Material in your app.
-
-// Fonts
-@import 'https://fonts.googleapis.com/css?family=Material+Icons';
-@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500');
+@use "@angular/material" as mat;
 
 $fontConfig: (
   display-4: mat.define-typography-level(112px, 112px, 300, 'Roboto', -0.0134em),
@@ -24,59 +17,41 @@ $fontConfig: (
 );
 
 // Foreground Elements
+// Compute font config
+@include mat.core($fontConfig);
 
 // Light Theme Text
-$dark-text: #000000;
-$dark-primary-text: rgba($dark-text, 0.87);
+$dark-primary-text: #000000;
 $dark-accent-text: rgba($dark-primary-text, 0.54);
 $dark-disabled-text: rgba($dark-primary-text, 0.38);
-$dark-dividers: rgba($dark-primary-text, 0.12);
 $dark-focused: rgba($dark-primary-text, 0.12);
 
 $mat-light-theme-foreground: (
   base:              black,
-  divider:           $dark-dividers,
-  dividers:          $dark-dividers,
   disabled:          $dark-disabled-text,
-  disabled-button:   rgba($dark-text, 0.26),
   disabled-text:     $dark-disabled-text,
   elevation:         black,
-  secondary-text:    $dark-accent-text,
   hint-text:         $dark-disabled-text,
   accent-text:       $dark-accent-text,
   icon:              $dark-accent-text,
-  icons:             $dark-accent-text,
   text:              $dark-primary-text,
-  slider-min:        $dark-primary-text,
-  slider-off:        rgba($dark-text, 0.26),
-  slider-off-active: $dark-disabled-text,
 );
 
 // Dark Theme text
-$light-text: #ffffff;
-$light-primary-text: $light-text;
+$light-primary-text: #ffffff;
 $light-accent-text: rgba($light-primary-text, 0.7);
 $light-disabled-text: rgba($light-primary-text, 0.5);
-$light-dividers: rgba($light-primary-text, 0.12);
 $light-focused: rgba($light-primary-text, 0.12);
 
 $mat-dark-theme-foreground: (
-  base:              $light-text,
-  divider:           $light-dividers,
-  dividers:          $light-dividers,
+  base:              $light-primary-text,
   disabled:          $light-disabled-text,
-  disabled-button:   rgba($light-text, 0.3),
   disabled-text:     $light-disabled-text,
   elevation:         black,
   hint-text:         $light-disabled-text,
-  secondary-text:    $light-accent-text,
   accent-text:       $light-accent-text,
-  icon:              $light-text,
-  icons:             $light-text,
-  text:              $light-text,
-  slider-min:        $light-text,
-  slider-off:        rgba($light-text, 0.3),
-  slider-off-active: rgba($light-text, 0.3),
+  icon:              $light-primary-text,
+  text:              $light-primary-text,
 );
 
 // Background config
@@ -94,17 +69,12 @@ $dark-bg-alpha-12:    rgba(#272727, 0.12);
 $mat-light-theme-background: (
   background:               $light-background,
   status-bar:               $light-bg-darker-20,
-  app-bar:                  $light-bg-darker-5,
-  hover:                    $dark-bg-alpha-4,
   card:                     $light-bg-lighter-5,
   dialog:                   $light-bg-lighter-5,
   tooltip:                  $dark-bg-tooltip,
-  disabled-button:          $dark-bg-alpha-12,
   raised-button:            $light-bg-lighter-5,
   focused-button:           $dark-focused,
   selected-button:          $light-bg-darker-20,
-  selected-disabled-button: $light-bg-darker-30,
-  disabled-button-toggle:   $light-bg-darker-10,
   unselected-chip:          $light-bg-darker-10,
   disabled-list-option:     $light-bg-darker-10,
 );
@@ -122,38 +92,28 @@ $light-bg-alpha-12:   rgba(#ffffff, 0.12);
 $mat-dark-theme-background: (
   background:               $dark-background,
   status-bar:               $dark-bg-lighter-20,
-  app-bar:                  $dark-bg-lighter-5,
   hover:                    $light-bg-alpha-4,
   card:                     $dark-bg-lighter-5,
   dialog:                   $dark-bg-lighter-5,
   tooltip:                  $dark-bg-lighter-20,
-  disabled-button:          $light-bg-alpha-12,
   raised-button:            $dark-bg-lighter-5,
   focused-button:           $light-focused,
   selected-button:          $dark-bg-lighter-20,
-  selected-disabled-button: $dark-bg-lighter-30,
-  disabled-button-toggle:   $dark-bg-lighter-10,
   unselected-chip:          $dark-bg-lighter-20,
   disabled-list-option:     $dark-bg-lighter-10,
 );
 
-// Compute font config
-@include mat.core($fontConfig);
 
 // Theme Config
-
 body {
   --primary-color: #75afff;
-  --primary-lighter-color: #d6e7ff;
-  --primary-darker-color: #5896ff;
-  --text-primary-color: #{$dark-primary-text};
-  --text-primary-lighter-color: #{$dark-primary-text};
-  --text-primary-darker-color: #{$dark-primary-text};
+  --primary-lighter-color: #cce1ff;
+  --primary-darker-color: #1a79ff;
 }
 $mat-primary: (
-  main: #75afff,
-  lighter: #d6e7ff,
-  darker: #5896ff,
+  main: var(--primary-color),
+  lighter: var(--primary-lighter-color),
+  darker: var(--primary-darker-color),
   200: #75afff, // For slide toggle,
   contrast : (
     main: $dark-primary-text,
@@ -163,19 +123,15 @@ $mat-primary: (
 );
 $theme-primary: mat.define-palette($mat-primary, main, lighter, darker);
 
-
 body {
   --accent-color: #ffc95f;
   --accent-lighter-color: #ffefcf;
-  --accent-darker-color: #ffb543;
-  --text-accent-color: #{$dark-primary-text};
-  --text-accent-lighter-color: #{$dark-primary-text};
-  --text-accent-darker-color: #{$dark-primary-text};
+  --accent-darker-color: #f3a022;
 }
 $mat-accent: (
-  main: #ffc95f,
-  lighter: #ffefcf,
-  darker: #ffb543,
+  main: var(--accent-color),
+  lighter: var(--accent-lighter-color),
+  darker: var(--accent-darker-color),
   200: #ffc95f, // For slide toggle,
   contrast : (
     main: $dark-primary-text,
@@ -189,15 +145,12 @@ $theme-accent: mat.define-palette($mat-accent, main, lighter, darker);
 body {
   --warn-color: #ff0000;
   --warn-lighter-color: #ffb3b3;
-  --warn-darker-color: #ff0000;
-  --text-warn-color: #{$light-primary-text};
-  --text-warn-lighter-color: #{$dark-primary-text};
-  --text-warn-darker-color: #{$light-primary-text};
+  --warn-darker-color: #cc0000;
 }
 $mat-warn: (
   main: #ff0000,
   lighter: #ffb3b3,
-  darker: #ff0000,
+  darker: #cc0000,
   200: #ff0000, // For slide toggle,
   contrast : (
     main: $light-primary-text,
@@ -225,32 +178,62 @@ $dark-theme: (
   background: $mat-dark-theme-background,
 );
 
-.lightTheme {
-  @include mat.button-theme($light-theme);
-}
-.lightTheme {
-  @include mat.button-theme($dark-theme);
-}
-
-// Spec
 *, *::after, *::before {
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
 }
 html, body { height: 100%; }
-body { font-family: Roboto, "Helvetica Neue", sans-serif; }
+body {
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  @include mat.button-theme($light-theme);
+  @include mat.ripple-theme($light-theme);
+  @include mat.toolbar-theme($light-theme);
+  @include mat.progress-spinner-theme($light-theme);
+  @include mat.tooltip-theme($light-theme);
+  @include mat.card-theme($light-theme);
+  .lightTheme {
+    @include mat.sidenav-theme($light-theme);
+    background-color: mat.get-color-from-palette($mat-light-theme-background, 'background');
+    color: mat.get-color-from-palette($mat-light-theme-foreground, 'text');
+    svg {
+      stroke: mat.get-color-from-palette($mat-light-theme-foreground, 'text');
+    }
+  }
+  .darkTheme {
+    @include mat.sidenav-color($dark-theme);
+    @include mat.card-color($dark-theme);
+    background-color: mat.get-color-from-palette($mat-dark-theme-background, 'background');
+    color: mat.get-color-from-palette($mat-dark-theme-foreground, 'text');
+    svg {
+      stroke: mat.get-color-from-palette($mat-dark-theme-foreground, 'text');
+    }
+  }
+  .mat-elevation-z3 {@include mat.elevation(3)}
+  .mat-elevation-z4 {@include mat.elevation(4)}
+  .mat-elevation-z5 {@include mat.elevation(5)}
+  .mat-elevation-z6 {@include mat.elevation(6)}
+  .mat-elevation-z7 {@include mat.elevation(7)}
+  .mat-elevation-z8 {@include mat.elevation(8)}
+  .mat-elevation-z9 {@include mat.elevation(9)}
+  .mat-elevation-z10 {@include mat.elevation(10)}
+  div.cdk-overlay-container {
+    mat-tooltip-component {
+      div.mat-tooltip {
+        font-size: 0.8em;
+        margin: 16px;
+        padding: 5px 10px;
+      }
+    }
+  }
+}
 
 div.wrapper {
   min-height: 100vh;
   max-height: 100vh;
   width: 100vw;
-  overflow: auto;
+  overflow: hidden auto;
 }
 
-div.container {
-  width: 100%;
-  min-height: 90vh;
-  background-color: var(--background);
-  position: relative;
-}
+canvas { display: block; }
+
