--- a/src/app/canvas-projects/attractors/aizawa/aizawa.component.html
+++ b/src/app/canvas-projects/attractors/aizawa/aizawa.component.html
@@ -1,5 +1,5 @@
 <div class="full-functionality-canvas" style="overflow: hidden;">
-  <canvas #canvas></canvas>
+  <canvas appCanvasResize #canvas></canvas>
   <button
     mat-mini-fab
     color="accent"
