--- a/src/app/canvas-projects/canvas-projects.component.scss
+++ b/src/app/canvas-projects/canvas-projects.component.scss
@@ -5,7 +5,7 @@ mat-sidenav-container {
       .mat-list-item {
         height: 40px
       }
-      a {
+      mat-list-item{
         display: block;
         &:hover, &:focus-visible {
           background-color: lighten($color: rgb(78, 78, 78, 0.3), $amount: 30%);
@@ -19,15 +19,12 @@ mat-sidenav-container {
         cdk-accordion-item {
           & > mat-list-item {
             mat-icon {
-              transition: transform 0.3s ease-out;
               margin-left: auto;
-            }
-            &:hover {
-              background-color: lighten($color: rgb(78, 78, 78, 0.7), $amount: 30%);
             }
           }
           div.expansion-panel {
             overflow: hidden;
+            will-change: height;
             a {
               white-space: nowrap;
             }
