--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -22,20 +22,23 @@
     </div>
     <button
       [matTooltip]="'Switch to '+switchTheme"
-      [matTooltipPosition]="'below'"
+      matTooltipPosition="before"
       #tooltip="matTooltip"
       class="toggle"
       aria-label="Switch theme"
       mat-icon-button
+      (blur)="tooltip.show()"
       (click)="toggleTheme(); emitEvent(); tooltip.show()"
       style="margin-left: auto;"
+      matTooltipClass="theme-tooltip"
     ><mat-icon>{{themeIcon}}</mat-icon></button>
   </mat-toolbar-row>
   <mat-toolbar-row *ngIf="isWindowSmall" style="height: min-content; overflow-x: auto;">
-    <div class="links" style="width: 100%; justify-content: center;">
+    <div class="links" [style]="{width: '100%', justifyContent: 'center'}">
       <a
         [@fadeIn]
         matRipple
+        [style.padding]="'0px'"
         *ngFor="let navigation of navigations"
         routerLink="{{navigation.route}}"
         routerLinkActive="active"
