--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 @use "@angular/material" as mat;
 
+/* #region */  //fontConfig
 $fontConfig: (
   display-4: mat.define-typography-level(112px, 112px, 300, 'Roboto', -0.0134em),
   display-3: mat.define-typography-level(56px, 56px, 400, 'Roboto', -0.0089em),
@@ -15,44 +16,46 @@ $fontConfig: (
   caption: mat.define-typography-level(12px, 20px, 400, 'Roboto', 0.0333em),
   input: mat.define-typography-level(inherit, 1.125, 400, 'Roboto', 1.5px)
 );
+/* #endregion */
 
-// Foreground Elements
 // Compute font config
 @include mat.core($fontConfig);
 
+// Foreground Elements
 // Light Theme Text
 $dark-primary-text: #000000;
 $dark-accent-text: rgba($dark-primary-text, 0.54);
 $dark-disabled-text: rgba($dark-primary-text, 0.38);
 $dark-focused: rgba($dark-primary-text, 0.12);
 
-$mat-light-theme-foreground: (
-  base:              black,
-  disabled:          $dark-disabled-text,
-  disabled-text:     $dark-disabled-text,
-  elevation:         black,
-  hint-text:         $dark-disabled-text,
-  accent-text:       $dark-accent-text,
-  icon:              $dark-accent-text,
-  text:              $dark-primary-text,
-);
-
 // Dark Theme text
-$light-primary-text: #ffffff;
+$light-primary-text: #ffffffe7;
 $light-accent-text: rgba($light-primary-text, 0.7);
 $light-disabled-text: rgba($light-primary-text, 0.5);
 $light-focused: rgba($light-primary-text, 0.12);
 
-$mat-dark-theme-foreground: (
-  base:              $light-primary-text,
-  disabled:          $light-disabled-text,
-  disabled-text:     $light-disabled-text,
-  elevation:         black,
-  hint-text:         $light-disabled-text,
-  accent-text:       $light-accent-text,
-  icon:              $light-primary-text,
-  text:              $light-primary-text,
+/* #region */ //foreground theming
+$mat-light-theme-foreground: (
+  base:          black,
+  disabled:      $dark-disabled-text,
+  disabled-text: $dark-disabled-text,
+  elevation:     black,
+  hint-text:     $dark-disabled-text,
+  accent-text:   $dark-accent-text,
+  icon:          $dark-accent-text,
+  text:          $dark-primary-text,
 );
+$mat-dark-theme-foreground: (
+  base:          $light-primary-text,
+  disabled:      $light-disabled-text,
+  disabled-text: $light-disabled-text,
+  elevation:     black,
+  hint-text:     $light-disabled-text,
+  accent-text:   $light-accent-text,
+  icon:          $light-primary-text,
+  text:          $light-primary-text,
+);
+/* #endregion */
 
 // Background config
 // Light bg
@@ -65,20 +68,6 @@ $light-bg-lighter-5:  lighten($light-background, 5%);
 $dark-bg-tooltip:     lighten(#272727, 20%);
 $dark-bg-alpha-4:     rgba(#272727, 0.04);
 $dark-bg-alpha-12:    rgba(#272727, 0.12);
-
-$mat-light-theme-background: (
-  background:               $light-background,
-  status-bar:               $light-bg-darker-20,
-  card:                     $light-bg-lighter-5,
-  dialog:                   $light-bg-lighter-5,
-  tooltip:                  $dark-bg-tooltip,
-  raised-button:            $light-bg-lighter-5,
-  focused-button:           $dark-focused,
-  selected-button:          $light-bg-darker-20,
-  unselected-chip:          $light-bg-darker-10,
-  disabled-list-option:     $light-bg-darker-10,
-);
-
 // Dark bg
 $dark-background:     #272727;
 $dark-bg-lighter-5:   lighten($dark-background, 5%);
@@ -88,69 +77,77 @@ $dark-bg-lighter-30:  lighten($dark-background, 30%);
 $light-bg-alpha-4:    rgba(#ffffff, 0.04);
 $light-bg-alpha-12:   rgba(#ffffff, 0.12);
 
-// Background palette for dark themes.
-$mat-dark-theme-background: (
-  background:               $dark-background,
-  status-bar:               $dark-bg-lighter-20,
-  hover:                    $light-bg-alpha-4,
-  card:                     $dark-bg-lighter-5,
-  dialog:                   $dark-bg-lighter-5,
-  tooltip:                  $dark-bg-lighter-20,
-  raised-button:            $dark-bg-lighter-5,
-  focused-button:           $light-focused,
-  selected-button:          $dark-bg-lighter-20,
-  unselected-chip:          $dark-bg-lighter-20,
-  disabled-list-option:     $dark-bg-lighter-10,
+/* #region */ //theming the background
+$mat-light-theme-background: (
+  background:           $light-background,
+  status-bar:           $light-bg-darker-20,
+  card:                 $light-bg-lighter-5,
+  dialog:               $light-bg-lighter-5,
+  tooltip:              $dark-bg-tooltip,
+  raised-button:        $light-bg-lighter-5,
+  focused-button:       $dark-focused,
+  selected-button:      $light-bg-darker-20,
+  unselected-chip:      $light-bg-darker-10,
+  disabled-list-option: $light-bg-darker-10,
 );
-
+$mat-dark-theme-background: (
+  background:           $dark-background,
+  status-bar:           $dark-bg-lighter-20,
+  hover:                $light-bg-alpha-4,
+  card:                 $dark-bg-lighter-5,
+  dialog:               $dark-bg-lighter-5,
+  tooltip:              $dark-bg-lighter-20,
+  raised-button:        $dark-bg-lighter-5,
+  focused-button:       $light-focused,
+  selected-button:      $dark-bg-lighter-20,
+  unselected-chip:      $dark-bg-lighter-20,
+  disabled-list-option: $dark-bg-lighter-10,
+);
+/* #endregion */
 
 // Theme Config
 body {
+  //primary
   --primary-color: #75afff;
   --primary-lighter-color: #cce1ff;
   --primary-darker-color: #1a79ff;
-}
-$mat-primary: (
-  main: var(--primary-color),
-  lighter: var(--primary-lighter-color),
-  darker: var(--primary-darker-color),
-  200: #75afff, // For slide toggle,
-  contrast : (
-    main: $dark-primary-text,
-    lighter: $dark-primary-text,
-    darker: $dark-primary-text,
-  )
-);
-$theme-primary: mat.define-palette($mat-primary, main, lighter, darker);
-
-body {
+  //accent
   --accent-color: #ffc95f;
   --accent-lighter-color: #ffefcf;
   --accent-darker-color: #f3a022;
-}
-$mat-accent: (
-  main: var(--accent-color),
-  lighter: var(--accent-lighter-color),
-  darker: var(--accent-darker-color),
-  200: #ffc95f, // For slide toggle,
-  contrast : (
-    main: $dark-primary-text,
-    lighter: $dark-primary-text,
-    darker: $dark-primary-text,
-  )
-);
-$theme-accent: mat.define-palette($mat-accent, main, lighter, darker);
-
-
-body {
+  //warn
   --warn-color: #ff0000;
   --warn-lighter-color: #ffb3b3;
   --warn-darker-color: #cc0000;
 }
+
+/* #region */ // initialising primary, accent and warn palletes
+$mat-primary: (
+  main: var(--primary-color),
+  lighter: var(--primary-lighter-color),
+  darker: var(--primary-darker-color),
+  200: #75afff,
+  contrast : (
+    main: $dark-primary-text,
+    lighter: $dark-primary-text,
+    darker: $dark-primary-text,
+  )
+);
+$mat-accent: (
+  main: var(--accent-color),
+  lighter: var(--accent-lighter-color),
+  darker: var(--accent-darker-color),
+  200: #ffc95f,
+  contrast : (
+    main: $dark-primary-text,
+    lighter: $dark-primary-text,
+    darker: $dark-primary-text,
+  )
+);
 $mat-warn: (
-  main: #ff0000,
-  lighter: #ffb3b3,
-  darker: #cc0000,
+  main: var(--warn-color),
+  lighter: var(--warn-lighter-color),
+  darker: var(--warn-darker-color),
   200: #ff0000, // For slide toggle,
   contrast : (
     main: $light-primary-text,
@@ -158,9 +155,12 @@ $mat-warn: (
     darker: $light-primary-text,
   )
 );
+/* #endregion */
+$theme-primary: mat.define-palette($mat-primary, main, lighter, darker);
+$theme-accent: mat.define-palette($mat-accent, main, lighter, darker);
 $theme-warn: mat.define-palette($mat-warn, main, lighter, darker);
-;
 
+//theme init
 $light-theme: (
   primary: $theme-primary,
   accent: $theme-accent,
@@ -185,13 +185,38 @@ $dark-theme: (
 }
 html, body { height: 100%; }
 body {
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+  font-family: Roboto, sans-serif;
   @include mat.button-theme($light-theme);
   @include mat.ripple-theme($light-theme);
   @include mat.toolbar-theme($light-theme);
   @include mat.progress-spinner-theme($light-theme);
   @include mat.tooltip-theme($light-theme);
   @include mat.card-theme($light-theme);
+  mat-spinner {
+    will-change: stroke-dashoffset;
+  }
+  blockquote {
+    display: block;
+    margin: 0 auto;
+    font-size: 1.6rem;
+    width: clamp(250px, 70vw, 1000px);
+    line-height: 2.2ch;
+    text-align: center;
+    margin-block: 1em;
+    border: 1px solid;
+    padding-block: 1rem;
+    padding-inline: 2rem;
+    q {
+      width: inherit;
+      font-family: 'Parisienne', cursive;
+    }
+    span {
+      font-size: 0.7em;
+      display: inherit;
+      margin-left: auto;
+      text-align: right
+    }
+  }
   .lightTheme {
     @include mat.sidenav-theme($light-theme);
     background-color: mat.get-color-from-palette($mat-light-theme-background, 'background');
@@ -216,8 +241,10 @@ body {
   .mat-elevation-z7 {@include mat.elevation(7)}
   .mat-elevation-z8 {@include mat.elevation(8)}
   .mat-elevation-z9 {@include mat.elevation(9)}
-  .mat-elevation-z10 {@include mat.elevation(10)}
   div.cdk-overlay-container {
+    div.mat-tooltip-panel:has(div.theme-tooltip) {
+      top: 0px !important;
+    }
     mat-tooltip-component {
       div.mat-tooltip {
         font-size: 0.8em;
@@ -236,4 +263,3 @@ div.wrapper {
 }
 
 canvas { display: block; }
-
