--- a/src/app/canvas-projects/main-content/main-content.component.html
+++ b/src/app/canvas-projects/main-content/main-content.component.html
@@ -1,5 +1,33 @@
 <blockquote>
-  <q>Mathematics is the purest of the arts, as well as the most misunderstood</q>
+  <q>Mathematics is the purest of the arts, as well as the most misunderstood.</q>
   <br/>
   <span>-Paul Lockhart</span>
 </blockquote>
+<br>
+<section>
+  <h1 class="mat-h1">
+    What is it about Mathematics ?
+  </h1>
+  <p>
+    Mathematics is just as beautiful as any form of art. It's subtle but expressive, hidden but visible. The problem is that it is being taught to everyone in the wrong way. Most of us, if not all, must have seen mathematics as a frustrating or a boring subject atleast once in our lives. I too was taught Maths in a similar way. Arithmetics, shapes and numbers till 3rd grade, fractions and decimals till 5th grade, low level algebra from 6th grade, trigonometry from 9th grade, and so on.
+  </p>
+</section>
+<section>
+  <h2 class="mat-h2">
+    My introduction to Programming
+  </h2>
+  <p>
+    JavaScript was my first programming language that introduced me to almost all the major concepts in the world of programming. I was a complete beginner with no knowledge or experience on programming. It took me upto 6 months to write proper JavaScript in a flow without thinking too much about syntax errors.
+  </p>
+  <p>
+    Using the Canvas element was probably one of the best things I did that boosted my learning in the field of programming. The <code>HTML5</code> Canvas element taught me most of mathematics' practical applications. This is where I first came across data visualization and dynamic programming.
+  </p>
+</section>
+<section id="parchment">
+  <h2>What have I made with Canvas ?</h2>
+  <p>
+    I have used the Canvas element from tip to tail. I have programmed in its 2d and webgl contexts. I have designed and developed both 2d and 3d interactive arts on the web.
+  </p>
+
+</section>
+
