--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -7,9 +7,9 @@
       <div class="myName" [ngStyle]="{'display': titleDisplay, fontSize: '2em'}">
         Rithish
       </div>
-      <div class="introduction" [ngStyle]="{'font-size': '1.2em'}">
+      <div class="introduction">
         <span [appTypeAnimation]="mainContent.subHead"></span> <br />
-        <span [appTypeAnimation]="mainContent.content"></span>
+        <span [appTypeAnimation]="mainContent.content" [style.min-height]="'51px'"></span>
       </div>
       <button mat-raised-button [ngStyle]="{'margin': margin}" (click)="goToHome()" color="accent">{{'Dive in' | titlecase}}</button>
     </section>
