--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar *ngIf="nav.present" color="primary">
+<mat-toolbar *ngIf="nav.present" color="primary" class="mat-elevation-z4">
   <mat-toolbar-row>
     <span routerLink="/landing-page" aria-hidden="false" class="logo" aria-label="Home page link" role="link" style="margin-right: 1em; cursor: pointer;" matTooltip="Home page" matTooltipPosition="after">
       <svg width="50" height="55" viewBox="0 0 50 40" nofill xmlns="http://www.w3.org/2000/svg">
@@ -27,7 +27,6 @@
       class="toggle"
       aria-label="Switch theme"
       mat-icon-button
-      (blur)="tooltip.show()"
       (click)="toggleTheme(); emitEvent(); tooltip.show()"
       style="margin-left: auto;"
       matTooltipClass="theme-tooltip"
