--- a/src/app/toolbar/toolbar.component.scss
+++ b/src/app/toolbar/toolbar.component.scss
@@ -9,7 +9,6 @@ svg {
 }
 mat-toolbar {
   min-height: $toolbar-height;
-  box-shadow: 0 -1px 12px rgba(0, 0, 0, 0.75);
   z-index: 2;
   top: 0px;
   position: sticky;
@@ -30,13 +29,12 @@ mat-toolbar {
         font-size: medium;
         letter-spacing: 1px;
         padding: 0px 0.75em;
-        border-right: 1px solid var(--accent-color);
+        border-right: 1px solid var(--primary-darker-color);
         &:last-of-type {
           border: none;
         }
         &:hover:not(.active) {
-          background-color: var(--primary-darker-color);
-          color: white;
+          background-color: var(--primary-lighter-color);
         }
         &.active {
           background-color: var(--primary-lighter-color);
