--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,25 +1,6 @@
 @use "@angular/material" as mat;
 
-/* #region */  //fontConfig
-$fontConfig: (
-  display-4: mat.define-typography-level(112px, 112px, 300, 'Roboto', -0.0134em),
-  display-3: mat.define-typography-level(56px, 56px, 400, 'Roboto', -0.0089em),
-  display-2: mat.define-typography-level(45px, 48px, 400, 'Roboto', 0.0000em),
-  display-1: mat.define-typography-level(34px, 20px, 500, 'Roboto', 0.0074em),
-  headline: mat.define-typography-level(24px, 10px, 400, 'Roboto', 0.0000em),
-  title: mat.define-typography-level(20px, 32px, 500, 'Roboto', 0.0075em),
-  subheading-2: mat.define-typography-level(16px, 28px, 400, 'Roboto', 0.0094em),
-  subheading-1: mat.define-typography-level(15px, 24px, 500, 'Roboto', 0.0067em),
-  body-2: mat.define-typography-level(14px, 20px, 400, 'Roboto', 0.0179em),
-  body-1: mat.define-typography-level(14px, 20px, 400, 'Roboto', 0.0179em),
-  button: mat.define-typography-level(14px, 14px, 500, 'Roboto', 0.0893em),
-  caption: mat.define-typography-level(12px, 20px, 400, 'Roboto', 0.0333em),
-  input: mat.define-typography-level(inherit, 1.125, 400, 'Roboto', 1.5px)
-);
-/* #endregion */
-
-// Compute font config
-@include mat.core($fontConfig);
+@import "./theme-config.scss";
 
 // Foreground Elements
 // Light Theme Text
@@ -29,7 +10,7 @@ $dark-disabled-text: rgba($dark-primary-text, 0.38);
 $dark-focused: rgba($dark-primary-text, 0.12);
 
 // Dark Theme text
-$light-primary-text: #ffffffe7;
+$light-primary-text: #ffffffe3;
 $light-accent-text: rgba($light-primary-text, 0.7);
 $light-disabled-text: rgba($light-primary-text, 0.5);
 $light-focused: rgba($light-primary-text, 0.12);
@@ -242,13 +223,10 @@ body {
   .mat-elevation-z8 {@include mat.elevation(8)}
   .mat-elevation-z9 {@include mat.elevation(9)}
   div.cdk-overlay-container {
-    div.mat-tooltip-panel:has(div.theme-tooltip) {
-      top: 0px !important;
-    }
     mat-tooltip-component {
       div.mat-tooltip {
-        font-size: 0.8em;
-        margin: 16px;
+        font-size: 0.8rem;
+        margin: 0px 16px;
         padding: 5px 10px;
       }
     }
