--- a/src/styles.scss
+++ b/src/styles.scss
@@ -170,7 +170,9 @@ $dark-theme: (
   padding: 0px;
   box-sizing: border-box;
 }
-html, body { height: 100%; }
+html, body {
+  height: 100%;
+}
 body {
   font-family: Roboto, sans-serif;
   @include mat.button-theme($light-theme);
@@ -181,6 +183,10 @@ body {
   @include mat.card-theme($light-theme);
   @include mat.tabs-theme($light-theme);
   @include mat.slider-theme($light-theme);
+  width: 100vw;
+  max-width: 39.6875cm;
+  display: block;
+  margin-inline: auto;
   mat-spinner {
     will-change: stroke-dashoffset;
   }
@@ -246,7 +252,7 @@ body {
 div.wrapper {
   min-height: 100vh;
   max-height: 100vh;
-  width: 100vw;
+  width: inherit;
   overflow: hidden auto;
   scrollbar-color: var(--primary-color) transparent;
   scrollbar-width: thin;
