--- a/src/app/projects/periodic-elements/element-data/element-data.component.html
+++ b/src/app/projects/periodic-elements/element-data/element-data.component.html
@@ -55,7 +55,7 @@
   </section>
   <mat-divider></mat-divider>
   <section class="history" data-name="History">
-    <h1 class="mat-h1">Hisotry of {{element.name}}</h1>
+    <h1 class="mat-h1">History of {{element.name}}</h1>
     <mat-list>
       <mat-list-item *ngFor="let event of element.history">{{event}}</mat-list-item>
     </mat-list>
