--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -8,37 +8,23 @@
     @include abstracts.content-container-styles;
     section {
       display: block;
-      &.libraries, &.languages {
-        div.mat-card-container {
-          gap: 5vmin;
-          display: grid;
-          grid-template-columns: repeat(3, 1fr);
-          @include abstracts.tablet-lg-landscape {
-            grid-template-columns: repeat(2, 1fr);
-          }
-          @include abstracts.mobile-lg-landscape {
-            grid-template-columns: 1fr;
-          }
-          mat-card {
-            height: auto;
-            padding-top: 16px;
-              mat-card-header {
-                img {
-                  display: inline-block;
-                  margin: 0;
-                  margin-left: auto;
-                  width: 52px;
-                  aspect-ratio: auto;
-                  margin-top: -8px;
-                }
-              }
-            }
-            mat-card-content {
-              padding-block: 0px;
-              opacity: 0.9;
-            }
-          }
+      div {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        align-items: stretch;
+        gap: 1em;
+        img {
+          display: block;
+          max-width:7em;
+          max-height:7em;
+          width: auto;
+          height: auto;
+          // aspect-ratio: 0.89;
         }
       }
   }
+}
 }
