--- a/src/app/projects/periodic-elements/element-data/element-data.component.scss
+++ b/src/app/projects/periodic-elements/element-data/element-data.component.scss
@@ -49,10 +49,10 @@ $flex-direction: row-reverse;
           }
         }
       }
-      p::first-letter {
-        font-size: 3em;
-        line-height: 1;
-      }
+      // p::first-letter {
+      //   font-size: 3em;
+      //   line-height: 1;
+      // }
     }
     &.image.discovery-physicals {
       display: flex;
