--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -19,6 +19,7 @@
           display: block;
           max-width:5em;
           max-height:5em;
+          margin: 1em;
           width: auto;
           height: auto;
         }
