--- a/src/app/projects/periodic-elements/element-data/element-data.component.html
+++ b/src/app/projects/periodic-elements/element-data/element-data.component.html
@@ -70,4 +70,6 @@
     </mat-list>
   </section>
   <canvas #bohrModel3d></canvas>
+  <mat-slider min="10" max="195" value="100"  (input)="onSliderChange($event)">
+  </mat-slider>
 </ng-container>
