--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,7 @@
-<div class="external-contact">
-  <a href="https://leetcode.com/user7805wl/" target="_blank"><img src="assets/leetcode-logo.jpg" alt="leetcode logo"></a>
-  <a href="https://github.com/Rithish288" target="_blank"><img src="assets/github-logo.jpg" alt="github logo"></a>
+<div class="footer">
+  <div class="external-contact">
+    <a href="https://leetcode.com/user7805wl/" target="_blank"><img src="assets/leetcode-logo.jpg" alt="leetcode logo"></a>
+    <a href="https://github.com/Rithish288" target="_blank"><img src="assets/github-logo.jpg" alt="github logo"></a>
+  </div>
+  <span class="copyright">&#169; 2023-{{currentYear}}, Rithish</span>
 </div>
-<span class="copyright">&#169; 2023-{{currentYear}}, Rithish</span>
